--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "muddev/common",
+    "name": "mugdev/common",
     "type": "library",
     "description": "Common lib",
     "license": "MIT",
