--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,7 @@
     "config": {
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
-            "php-http/discovery": true,
-            "symfony/flex": true,
-            "symfony/runtime": true
+            "php-http/discovery": true
         },
         "optimize-autoloader": true,
         "preferred-install": {
@@ -34,11 +32,6 @@
     "autoload": {
         "psr-4": {
             "Mugdev\\Common\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Mugdev\\Common\\Tests\\": "tests/"
         }
     }
 }
